--- a/Unity.Combat.csproj
+++ b/Unity.Combat.csproj
@@ -63,7 +63,8 @@
     <Compile Include="Assets\Combat\Runtime\Core\Action\IActionAbility.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Action\Actions\CureAction.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Action\Actions\DamageAction.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\AbilityEffect\EffectComponents\EffectCureComponent.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\Action\Actions\SpellAction.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\AbilityEffect\AbilityEffectComponents\EffectCureComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Skill\SkillExecution.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\ConfigObject\Type\ActionControlType.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Status\StatusAbility.cs" />
@@ -71,30 +72,39 @@
     <Compile Include="Assets\Combat\Runtime\Core\ConfigObject\Effect\ClearAllStatusEffect.cs" />
     <Compile Include="Assets\Combat\Util\GameTimer.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\AbilityEffect\AbilityEffect.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\AbilityEffect\EffectComponents\EffectDamageBloodSuckComponent.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\AbilityItem\AbilityItemTargetCounterComponent.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\AbilityEffect\AbilityEffectComponents\EffectDamageBloodSuckComponent.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\Skill\SkillAbility.Client.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\ExecutionEffect\ExecutionEffectComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\AbilityEffect\AbilityEffectComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Character\Components\ConditionComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\ConfigObject\Effect\CustomEffect.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\Character\IPosition.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\Skill\SkillExecution.Client.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\ConfigObject\SkillConfigObject.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\AbilityEffect\EffectComponents\EffectActionControlComponent.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\AbilityEffect\AbilityEffectComponents\EffectActionControlComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\ConfigObject\AttributeConfigObject.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Base\ExpressionHelper.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Attack\AttackExecution.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\AbilityEffect\EffectTriggerComponents\EffectIntervalTriggerComponent.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\AbilityEffect\AbilityEffectTriggerComponents\EffectIntervalTriggerComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Base\Entity.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\ConfigObject\Effect\Effect.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\ExecutionEffect\ExecutionEffectComponents\ExecutionSpawnCollisionComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\ConfigObject\Type\SkillAffectTargetType.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\ConfigObject\Type\SkillTargetSelectType.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\ExecutionEffect\ExecutionEffect.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Condition\ConditionEntity.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\AbilityEffect\EffectTriggerComponents\EffectConditionTriggerComponent.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\AbilityEffect\AbilityEffectTriggerComponents\EffectConditionTriggerComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Action\IActionExecution.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\ExecutionEffect\ExecutionEffectComponents\ExecutionAnimationComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Action\Actions\EffectAssignAction.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\AbilityEffect\EffectComponents\EffectAddStatusComponent.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\AbilityEffect\AbilityEffectComponents\EffectAddStatusComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\ConfigObject\Effect\DamageEffect.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\AbilityEffect\EffectComponents\EffectDamageReduceWithTargetCountComponent.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\AbilityEffect\AbilityEffectComponents\EffectDamageReduceWithTargetCountComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Skill\SkillAbility.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Action\Actions\AddStatusAction.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Attack\AttackAbility.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\AbilityItem\AbilityItem.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Status\StatusExecution.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\ConfigObject\Type\ConditionType.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\ConfigObject\Type\AddSkillEffetTargetType.cs" />
@@ -102,55 +112,51 @@
     <Compile Include="Assets\Combat\Runtime\Core\ConfigObject\Type\DamageType.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Base\EventComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Action\Actions\AttackAction.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\ExecutionEffect\ExecutionEffectComponents\ExecutionAssignToTargetComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Character\Components\ActionPointComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Action\Components\AbilityProbabilityTriggerComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\ConfigObject\Type\EffectTriggerType.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\Skill\ExecutionLinkEditor\CtrlPoint.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\ConfigObject\Type\SkillSpellType.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Character\CombatEntity.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\AbilityItem\AbilityItemBezierMoveComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Action\ActionComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Character\Components\StatusComponent.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\AbilityEffect\EffectComponents\EffectAttributeModifyComponent.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\AbilityEffect\EffectTriggerComponents\EffectActionTriggerComponent.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\AbilityEffect\AbilityEffectComponents\EffectAttributeModifyComponent.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\Skill\ExecutionTimeline\ExecutionEventEmitter.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\AbilityEffect\AbilityEffectTriggerComponents\EffectActionTriggerComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Ability\IAbilityEntity.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\ConfigObject\Type\ModifyType.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Character\Components\MotionComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Condition\ConditionWhenInTimeNoDamageComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\ConfigObject\EffectDecorator\EffectDecorator.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Action\Components\DamageBloodSuckComponent.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\ExecutionEffect\ExecutionEffectTriggerComponents\ExecutionTimeTriggerComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\ConfigObject\Effect\AttributeModifyEffect.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\AbilityEffect\EffectComponents\EffectDecoratosComponent.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\AbilityEffect\EffectComponents\EffectDamageComponent.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\Skill\ExecutionLinkEditor\ExecutionObject.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\AbilityEffect\AbilityEffectComponents\EffectDecoratosComponent.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\AbilityEffect\AbilityEffectComponents\EffectDamageComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Base\RandomHelper.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\ConfigObject\EffectDecorator\DamageReduceWithTargetCountDecorator.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Ability\IAbilityExecution.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\AbilityEffect\EffectComponents\EffectCustomComponent.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\AbilityEffect\AbilityEffectComponents\EffectCustomComponent.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\ExecutionEffect\ExecutionEffectComponents\ExecutionParticleEffectComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\ConfigObject\Effect\DamageBloodSuckEffect.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Base\Component.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\ConfigObject\Effect\ActionControlEffect.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Ability\AbilityLevelComponent.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\Skill\ExecutionLinkEditor\ExecuteClipData.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Attribute\HealthPoint.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Attribute\FloatNumeric.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\Status\Components\StatusLifeTimeComponent.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\Skill\ExecutionLinkEditor\ExecuteClipData.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\Skill\ExecutionLinkEditor\ExecutionObject.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\Skill\ExecutionLinkEditor\CtrlPoint.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\Skill\ExecutionTimeline\ExecutionEventEmitter.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\Skill\SkillAbility.Client.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\Skill\SkillExecution.Client.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\ExecutionEffect\ExecutionEffectComponent.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\ExecutionEffect\ExecutionEffect.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\Action\Actions\SpellAction.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\ExecutionEffect\ExecutionTriggerComponents\ExecutionTimeTriggerComponent.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\ExecutionEffect\ExecutionEffectComponents\ExecutionSpawnCollisionComponent.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\ExecutionEffect\ExecutionEffectComponents\ExecutionParticleEffectComponent.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\ExecutionEffect\ExecutionEffectComponents\ExecutionAssignToTargetComponent.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\ExecutionEffect\ExecutionEffectComponents\ExecutionAnimationComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\ExecutionEffect\ExecutionEffectComponents\ExecutionTriggerNewExecutionComponent.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\AbilityItem\AbilityItem.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\AbilityItem\AbilityItemTargetCounterComponent.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\Status\Components\StatusLifeTimeComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\AbilityItem\AbilityItemCollisionExecuteComponent.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\AbilityItem\AbilityItemBezierMoveComponent.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\Character\IPosition.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\Character\Components\SpellComponent.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\Character\Components\SkillComponent.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\ExecutionEffect\New Folder\OnTriggerEnterCallback.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\ExecutionEffect\New Folder\MoveWithDotweenComponent.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\ExecutionEffect\New Folder\LifeTimeComponent.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\ExecutionEffect\New Folder\AbilityItemProxyObj.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Combat\Unity.Combat.asmdef" />
