--- a/Unity.Hotfix.csproj
+++ b/Unity.Hotfix.csproj
@@ -893,6 +893,10 @@
       <Project>{57D111B4-22B4-6CA1-C350-5090EBF41DC0}</Project>
       <Name>Unity.Model</Name>
     </ProjectReference>
+    <ProjectReference Include="Unity.Combat.csproj">
+      <Project>{851245F3-9EDB-471B-CFC7-69E5338159B8}</Project>
+      <Name>Unity.Combat</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
