战斗框架 代码整理

--- a/Unity.Combat.csproj
+++ b/Unity.Combat.csproj
@@ -74,14 +74,13 @@
     <Compile Include="Assets\Combat\Runtime\Core\Combat\AbilityEffect\AbilityEffect.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Combat\AbilityItem\Component\AbilityItemTargetCounterComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Combat\Action\Action\SpellItemAction.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\Combat\Skill\SkillAbility.Client.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Combat\ExecutionEffect\Component\ExecutionEffectComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Combat\AbilityEffect\Component\AbilityEffectComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Combat\Character\Component\ConditionComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Combat\ConfigObject\Effect\CustomEffect.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Combat\CombatContext.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Combat\Character\IPosition.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\Combat\Skill\SkillExecution.Client.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\Combat\AbilityEffect\AbilityEffectComponent\AbilityEffectDamageBloodSuckComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Combat\ConfigObject\ItemConfigObject.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Combat\ConfigObject\SkillConfigObject.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Util\ExpressionHelper.cs" />
@@ -91,8 +90,10 @@
     <Compile Include="Assets\Combat\Test.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Combat\ConfigObject\Effect\Effect.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Combat\ExecutionEffect\ExecutionEffect.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\Combat\ExecutionEffect\ExecutionEffectComponent\ExecutionEffectParticleEffectComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Combat\Condition\ConditionEntity.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Combat\AbilityEffect\AbilityEffectTriggerComponent\AbilityEffectConditionTriggerComponent.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\Combat\AbilityEffect\AbilityEffectComponent\AbilityEffectActionControlComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Combat\Action\IActionExecution.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Combat\Action\Action\EffectAssignAction.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Combat\ConfigObject\Effect\DamageEffect.cs" />
@@ -102,7 +103,8 @@
     <Compile Include="Assets\Combat\Runtime\Core\Combat\AbilityItem\AbilityItem.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Combat\Status\StatusExecution.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Combat\ConfigObject\StatusConfigObject.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\Combat\Mono\AbilityItemProxyObj.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\Combat\Mono\AbilityItemProxy.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\Combat\AbilityEffect\AbilityEffectComponent\AbilityEffectDamageReduceWithTargetCountComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Component\EventComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Util\ExpressionParser.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Combat\Action\Action\SpellAttackAction.cs" />
@@ -114,6 +116,8 @@
     <Compile Include="Assets\Combat\Runtime\Core\Combat\AbilityItem\Component\AbilityItemBezierMoveComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Combat\Action\Component\ActionComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Combat\Character\Component\StatusComponent.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\Combat\ExecutionEffect\ExecutionEffectTriggerComponent\ExecutionEffectTimeTriggerComponent.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\Combat\AbilityEffect\AbilityEffectComponent\AbilityEffectDamageComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Combat\Skill\ExecutionTimeline\ExecutionEventEmitter.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Combat\AbilityEffect\AbilityEffectTriggerComponent\AbilityEffectActionTriggerComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Combat\Ability\IAbilityEntity.cs" />
@@ -122,11 +126,15 @@
     <Compile Include="Assets\Combat\Runtime\Core\Combat\ConfigObject\EffectDecorator\EffectDecorator.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Combat\Action\ActionComponent\DamageBloodSuckComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Combat\AbilityItem\Component\AbilityItemMoveWithDotweenComponent.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\Combat\ExecutionEffect\ExecutionEffectComponent\ExecutionEffectSpawnCollisionComponent.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\Combat\AbilityEffect\AbilityEffectComponent\AbilityEffectCustomComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Combat\ConfigObject\Effect\AttributeModifyEffect.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Combat\Skill\ExecutionLinkEditor\ExecutionObject.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\Util\RandomHelper.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\Combat\ExecutionEffect\ExecutionEffectComponent\ExecutionEffectTriggerNewExecutionComponent.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\Util\RandomUtil.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Combat\ConfigObject\EffectDecorator\DamageReduceWithTargetCountDecorator.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Combat\Ability\IAbilityExecution.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\Combat\AbilityEffect\AbilityEffectComponent\AbilityEffectCureComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Combat\Mono\OnTriggerEnterCallback.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Combat\ConfigObject\Effect\DamageBloodSuckEffect.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Object\Component.cs" />
@@ -135,25 +143,15 @@
     <Compile Include="Assets\Combat\Runtime\Core\Combat\Skill\ExecutionLinkEditor\ExecuteClipData.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Combat\Attribute\HealthPoint.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Combat\Attribute\FloatNumeric.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\Combat\ExecutionEffect\ExecutionEffectComponent\ExecutionEffectAnimationComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Combat\Status\Component\StatusLifeTimeComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Combat\Character\Component\SkillComponent.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\Combat\ExecutionEffect\ExecutionEffectComponent\ExecutionEffectAssignToTargetComponent.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\Combat\AbilityEffect\AbilityEffectComponent\AbilityEffectAttributeModifyComponent.cs" />
+    <Compile Include="Assets\Combat\Runtime\Core\Combat\AbilityEffect\AbilityEffectComponent\AbilityEffectDecoratosComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Combat\AbilityItem\Component\AbilityItemCollisionExecuteComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Combat\Character\Component\SpellItemComponent.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\Combat\AbilityEffect\AbilityEffectComponent\AbilityEffectDamageBloodSuckComponent.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\Combat\AbilityEffect\AbilityEffectComponent\AbilityEffectAttributeModifyComponent.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\Combat\AbilityEffect\AbilityEffectComponent\AbilityEffectDamageComponent.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\Combat\AbilityEffect\AbilityEffectComponent\AbilityEffectDamageReduceWithTargetCountComponent.cs" />
     <Compile Include="Assets\Combat\Runtime\Core\Combat\AbilityEffect\AbilityEffectComponent\AbilityEffectAddStatusComponent.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\Combat\AbilityEffect\AbilityEffectComponent\AbilityEffectActionControlComponent.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\Combat\AbilityEffect\AbilityEffectComponent\AbilityEffectCureComponent.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\Combat\AbilityEffect\AbilityEffectComponent\AbilityEffectDecoratosComponent.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\Combat\AbilityEffect\AbilityEffectComponent\AbilityEffectCustomComponent.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\Combat\ExecutionEffect\ExecutionEffectComponent\ExecutionEffectAssignToTargetComponent.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\Combat\ExecutionEffect\ExecutionEffectComponent\ExecutionEffectAnimationComponent.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\Combat\ExecutionEffect\ExecutionEffectTriggerComponent\ExecutionEffectTimeTriggerComponent.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\Combat\ExecutionEffect\ExecutionEffectComponent\ExecutionEffectParticleEffectComponent.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\Combat\ExecutionEffect\ExecutionEffectComponent\ExecutionEffectSpawnCollisionComponent.cs" />
-    <Compile Include="Assets\Combat\Runtime\Core\Combat\ExecutionEffect\ExecutionEffectComponent\ExecutionEffectTriggerNewExecutionComponent.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Combat\Unity.Combat.asmdef" />
